--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -1,7 +1,7 @@
 - title: Akhilesh KR
   image: "images/team/akhilesh.jpg"
   jobtitle: 
-  linkedinurl: ""
+  linkedinurl: "https://linkedin.com/in/akhilesh-kr"
   github: 
 
 - title: Uday Kiran N
