--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "KhasiDRP"
 email: udaycruise2903@gmail.com
 timezone: IST
-baseurl: ""
+baseurl: "/khasidrp"
 permalink: "/:title/"
 logo: 'images/logo.png'
 favicon: 'images/favicon.ico'
